nav and bannar section done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Project DOM</title>
+    <title>easy e ticket</title>
 
     <!-- daisyUI from CDN  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -19,7 +19,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                        'basic-color': '#FF4240',
+                        'primaryColor': '#1DD100',
                         'primary-text-color': '#131318',
                         'input-bg': '#F8F8F8',
                     }
@@ -29,11 +29,67 @@
     </script>
 </head>
 
-<body class="poppins">
+<body class="interFont">
+
+    <!-- header section start  -->
+    <header>
+        <div class="container mx-auto">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a>Home</a></li>
+                            <li><a>About</a></li>
+                            <li><a>Destination</a></li>
+                            <li><a>Search</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-xl">P-Ticket</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a>Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Destination</a></li>
+                        <li><a>Search</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end">
+                    <button class="btn bg-[#1DD10066] text-primaryColor border-2 border-primaryColor">Bus <img
+                            src="./images/busBtnLogo.png" alt="bus-logo"></button>
+                </div>
+            </div>
+
+            <!-- slider section start  -->
+            <section class="">
+                <div class="hero min-h-screen rounded-3xl" style="background-image: url(./images/banner.png);">
+                    <!-- <div class="hero-overlay bg-opacity-60 rounded-3xl"></div> -->
+                    <div class="hero-content text-center text-neutral-content">
+                        <div class="w-[742px] space-y-7">
+                            <h1 class="mb-5 text-6xl font-bold ralewayFont">End-to-End Travel with <br>
+                                <span class="text-primaryColor">EASY Paribahan</span>
+                            </h1>
+                            <p class="mb-5">Yes, you can run unit tests and view the results directly within the app.
+                                The integrated testing features allow for a streamlined.</p>
+                            <button class="btn btn-primary bg-primaryColor text-black">Buy Tickets</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- slider section end  -->
 
 
-
-
+        </div>
+    </header>
+    <!-- header section end  -->
 
 
 
