greenline section done

--- a/ok.html
+++ b/ok.html
@@ -58,6 +58,13 @@
 </header>
 <!-- header section end  -->
 
+
+
+
+
+<!-- main  -->
+
+
 <!-- Best offers for you section  -->
 <section>
     <div class="text-center mb-12">
@@ -96,4 +103,95 @@
     <div class="text-center mt-12">
         <button class="btn text-primaryColor bg-white border-primaryColor">See All Offers</button>
     </div>
+</section>
+
+
+<!-- easey poribohon section start  -->
+<section class="bg-[#F7F8F8]">
+    <!-- easy section heading  -->
+    <div class="text-center mb-12">
+        <h1 class="text-5xl ralewayFont font-extrabold mb-6">EASY Paribahan</h1>
+        <p class="font-light">Yes, you can run unit tests and view the results directly within the app. The
+            integrated <br> testing features allow for a streamlined .</p>
+    </div>
+
+    <!-- seat and balance section  -->
+    <div class="flex bg-[#FFFFFF] items-center justify-center rounded-2xl">
+        <div class=" p-14 flex-1">
+
+            <!-- Greenline Paribahan  -->
+            <div class="flex justify-between mb-6">
+
+                <div class="flex items-center justify-center gap-4">
+                    <div>
+                        <img class="w-[68.57px] h-[48px]" src="./images/bus-logo.png" alt="img">
+                    </div>
+                    <div>
+                        <h2 class="ralewayFont font-extrabold text-3xl">Greenline Paribahan</h2>
+                        <p class="font-light">Coach-009-WEB ! AC_Business</p>
+                    </div>
+                </div>
+
+                <div>
+                    <button class="btn bg-[#1DD10026] text-primaryColor"><img src="./images/seat-green.png"
+                            alt="bus-logo"> 40 Seats left</button>
+                </div>
+            </div>
+
+
+            <div class="bg-[#F7F8F8] p-8 rounded-3xl">
+                <!-- single line  -->
+                <div class="flex justify-between border-dashed border-b-2 border-[#03071233] pb-6">
+                    <div>
+                        <p class="ralewayFont font-semibold text-[#03071299]">Route</p>
+                    </div>
+                    <div>
+                        <h4 class="ralewayFont font-bold text-[#030712]">Dhaka - Sylhet</h4>
+                    </div>
+                </div>
+                <!-- single line  -->
+                <div class="flex justify-between border-dashed border-b-2 border-[#03071233] py-6">
+                    <div>
+                        <p class="ralewayFont font-semibold text-[#03071299]">Departure Time</p>
+                    </div>
+                    <div>
+                        <h4 class="ralewayFont font-bold text-[#030712]">9:00 PM</h4>
+                    </div>
+                </div>
+                <!-- single line  -->
+                <div class="flex justify-between pt-6">
+                    <div>
+                        <p class="font-semibold text-[#03071299]">
+                            <button class="btn bg-[#0307120D] px-4 py-5">Boarding Point - Laxmipur</button>
+                        </p>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-[#03071299]">
+                            <button class="btn bg-[#0307120D] px-4 py-5">Dropping Point - Bogura</button>
+                        </p>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-[#03071299]">
+                            <button class="btn bg-[#0307120D] px-4 py-5">Est. Time - 11 Hour</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- <h3 class="text-4xl font-extrabold">20% OFF</h3>
+            <h4 class="text-xl font-semibold">on your next purchase</h4>
+            <p class="font-light">use by January 2024</p> -->
+        </div>
+
+
+
+        <div><img src="images/info-devider.png" alt=""> </div>
+        <div class="p-14 text-center flex flex-col justify-center items-center">
+            <img src="./images/fare.png" alt="">
+            <h3 class="text-2xl font-extrabold">550 Taka</h3>
+            <p class="font-light">Per Seat</p>
+        </div>
+    </div>
+
 </section>
