all web page done

--- a/ok.html
+++ b/ok.html
@@ -195,3 +195,335 @@
     </div>
 
 </section>
+
+
+<!-- seat section  -->
+
+<section class="bg-[#FFFFFF]">
+
+    <div class="grid grid-cols-3 justify-center rounded-2xl py-8">
+
+        <div class="col-span-2 border-dashed border-r-2 border-[#03071233] px-8">
+            <h2 class="mb-6 text-2xl font-bold">Select Your Seat</h2>
+            <!-- set fillec section  -->
+            <div class="flex justify-between border-dashed border-b-2 border-t-2 border-[#03071233]">
+                <div>
+                    <button class="btn bg-[#F7F8F8] font-semibold text-[#03071280] border-0"><img
+                            src="./images/seat-gray.png" alt="bus-logo">Available</button>
+                </div>
+                <div>
+                    <button class="btn text-primaryColor bg-[#F7F8F8] border-0"><img
+                            src="./images/seat-green-filled.png" alt="bus-logo">Selected</button>
+                </div>
+            </div>
+
+            <!-- dirver bus-logo -->
+            <div class="my-6 flex justify-end">
+                <img src="./images/steering-wheel.png" class="bg-[#0307121A] px-14 py-5 rounded-2xl" alt="img">
+            </div>
+
+            <!-- seat plan  -->
+            <div class="seatContainer bg-[#FFFFFF] ">
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">A</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">A1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">A2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">A3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">A4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">B</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">B1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">B2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">B3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">B4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">C</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">C1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">C2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">C3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">C4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">D</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">D1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">D2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">D3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">D4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">E</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">E1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">E2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">E3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">E4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">F</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">F1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">F2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">F3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">F4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">G</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">G1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">G2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">G3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">G4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">H</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">H1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">H2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">H3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">H4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">I</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">I1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">I2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">I3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">I4</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat row  -->
+                <div class="aRow flex justify-between items-center gap-8 mb-6">
+                    <div class="text-xl font-bold text-[#03071280]">J</div>
+                    <div class="flex-1 flex justify-between">
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">J1</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">J2</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">J3</button>
+                        </div>
+                        <div><button
+                                class="flex text-2xl font-bold bg-[#F7F8F8] text-[#03071280] px-11 py-4 border rounded-2xl">J4</button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+
+
+        </div>
+
+        <!-- seat right section  -->
+        <div class="px-8">
+            <h2 class="mb-6 text-2xl font-bold">Select Your Seat</h2>
+
+            <div class="bg-[#F7F8F8] p-8 rounded-3xl mb-6">
+                <!-- single line  -->
+                <div class="flex justify-between border-dashed border-b-2 border-[#03071233] pb-6">
+                    <div class="indicator">
+                        <span class="indicator-item badge badge-secondary">99+</span>
+                        <button class="btn">Seat</button>
+                    </div>
+                    <div>
+                        <h4 class="ralewayFont font-bold text-[#030712]">Class</h4>
+                    </div>
+                    <div>
+                        <h4 class="ralewayFont font-bold text-[#030712]">Price</h4>
+                    </div>
+                </div>
+
+                <!-- single line  -->
+                <div class="flex justify-between border-dashed border-b-2 border-[#03071233] py-6">
+                    <div>
+                        <p class="ralewayFont font-semibold text-[#03071299]">C2</p>
+                    </div>
+                    <div>
+                        <h4 class="ralewayFont font-semibold text-[#03071299]">Economoy</h4>
+                    </div>
+                    <div>
+                        <h4 class="ralewayFont font-semibold text-[#03071299]">550</h4>
+                    </div>
+                </div>
+                <!-- single line  -->
+                <div class="flex justify-between border-dashed border-b-2 border-[#03071233] py-6">
+                    <div>
+                        <p class="ralewayFont font-bold text-[#030712]">Total Price</p>
+                    </div>
+                    <div>
+                        <h4 class="ralewayFont font-bold text-[#030712]">BDT 1100</h4>
+                    </div>
+                </div>
+                <div class="flex py-6">
+                    <label class="input flex items-center gap-2 w-full">
+                        <input type="text" class="grow" placeholder="Have any copupon?" />
+                        <button class="btn bg-primaryColor m-y-2">Accent</button>
+                    </label>
+                </div>
+                <!-- single line  -->
+                <div class="flex justify-between ">
+                    <div>
+                        <p class="ralewayFont font-bold text-[#030712]">Grand Total</p>
+                    </div>
+                    <div>
+                        <h4 class="ralewayFont font-bold text-[#030712]">BDT 1100</h4>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- from grop  -->
+            <div class="space-y-4">
+                <div>
+                    <label class="form-control w-full">
+                        <div class="label">
+                            <span class="label-text">Passenger Name*</span>
+                        </div>
+                        <input type="text" placeholder="Enter your name" class="input input-bordered w-full" />
+
+                    </label>
+                </div>
+                <div>
+                    <label class="form-control w-full">
+                        <div class="label">
+                            <span class="label-text">Phone Number*</span>
+                        </div>
+                        <input type="text" placeholder="Enter your phone number" class="input input-bordered w-full " />
+
+                    </label>
+                </div>
+                <div>
+                    <label class="form-control w-full ">
+                        <div class="label">
+                            <span class="label-text">Email ID</span>
+                        </div>
+                        <input type="text" placeholder="Enter your email id" class="input input-bordered w-full " />
+                    </label>
+                </div>
+                <div>
+                    <label class="form-control w-full ">
+                        <button class="btn bg-primaryColor w-full">Next</button>
+                    </label>
+
+                </div>
+            </div>
+
+            <div class="flex justify-around  py-6">
+                <a href="" class="underline text-sm">Terms and Conditions</a>
+                <a href="" class="underline text-sm">Cancellation Policy</a>
+            </div>
+
+
+        </div>
+
+    </div>
+</section>
