funtion done now validation

--- a/index.html
+++ b/index.html
@@ -487,29 +487,22 @@
 
                         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+                        <!-- show display section  -->
                         <!-- single line  -->
                         <div class="flex justify-between border-dashed border-b-2 border-[#03071233] py-6">
                             <div>
                                 <p class="ralewayFont font-bold text-[#030712]">Total Price</p>
                             </div>
                             <div>
-                                <h4 class="ralewayFont font-bold text-[#030712]">BDT <span id="totalCost">0</span>
+                                <h4 class="ralewayFont font-bold text-[#030712]">BDT <span id="totalCost"
+                                        class="text-xl">0</span>
                                 </h4>
                             </div>
                         </div>
+                        <!-- show display section  -->
+
+
+
                         <div class="flex py-6">
                             <label class="input flex items-center gap-2 w-full">
                                 <input type="text" class="grow" placeholder="Have any copupon?" />
