--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                             </h1>
                             <p class="mb-5">Yes, you can run unit tests and view the results directly within the app.
                                 The integrated testing features allow for a streamlined.</p>
-                            <button class="btn btn-primary bg-primaryColor text-black">Buy Tickets</button>
+                            <a href="#easyParibohon">
+                                <button class="btn bg-primaryColor text-black mt-7">Buy Tickets</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -136,7 +138,7 @@
 
 
         <!-- easey poribohon section start  -->
-        <section class="bg-[#F7F8F8] mt-28">
+        <section id="easyParibohon" class="bg-[#F7F8F8] mt-28">
             <!-- easy section heading  -->
             <div class="text-center mb-12">
                 <h1 class="text-5xl ralewayFont font-extrabold mb-6">EASY Paribahan</h1>
@@ -163,7 +165,7 @@
 
                         <div>
                             <button class="btn bg-[#1DD10026] text-primaryColor"><img src="./images/seat-green.png"
-                                    alt="bus-logo"> 40 Seats left</button>
+                                    alt="bus-logo"> <span id="seatAvailableNow">40</span> Seats left</button>
                         </div>
                     </div>
 
